feat: add etcd KV manage
